--- a/.github/workflows/json-validation.yml
+++ b/.github/workflows/json-validation.yml
@@ -14,6 +14,6 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           json_schema: release.jsonschema
-          json_path_pattern: .\d{4}\.\d{1}\.\d+.json$
+          json_path_pattern: \d{4}\.\d{1}\.\d+.json$
           send_comment: true
           clear_comments: true
